serd (0.30.1) unstable;

  * Fix GCC 4 build
  * Fix resolving some URIs against base URIs with no trailing slash
  * Fix colliding blank nodes when parsing TriG
  * Fix missing parse error messages
  * Fix parsing TriG graphs with several squashed trailing dots
  * Improve documentation

 -- David Robillard <d@drobilla.net>  Sat, 30 Mar 2019 12:33:56 +0100

serd (0.30.0) stable;

  * Upgrade to waf 2.0.9 and autowaf a328983
  * Fix length of base64 encoded nodes
  * Clarify errors returned by serd_env_expand()
  * Fix reported error when reading statements with only a blank node
  * Fix parsing local names that end with escaped dots
  * Improve relative URI serialisation
  * Add serdi option to write ASCII output
  * Make serdi guess input syntax from extension if unspecified
  * Make serdi syntax options case-insensitive
  * Add basic error tolerant parsing for line-based formats
  * Support strict parsing of prefixed names
  * Report errors for all failing test cases
  * Use more efficient stack allocation and growth policies
  * Add NTriples test suite
  * Fix building with MSVC
  * Clean up testing code
  * Add serd_free for freeing memory allocated by serd

 -- David Robillard <d@drobilla.net>  Sun, 22 Jul 2018 20:34:09 +0200

serd (0.28.0) stable;

  * Add support for reading from a user provided callback
  * Add serd_node_from_substring()
  * Fix strict parsing of abolute URI schemes
  * Fix parsing of hex escapes in file URIs (thanks Johannes Mueller)
  * Gracefully handle applications that write corrupt UTF-8
  * Fix hangs when reading corrupt UTF-8

 -- David Robillard <d@drobilla.net>  Fri, 21 Jul 2017 08:28:47 +0200

serd (0.26.0) stable;

  * Add support for TriG and NQuads
  * Add support for braindead SPARQL PREFIX and BASE directives

 -- David Robillard <d@drobilla.net>  Mon, 09 Jan 2017 20:10:35 -0500

serd (0.24.0) stable;

  * Add serd_node_new_relative_uri()
  * Fix construction and comparison of URIs with UTF-8 characters