@@ -5,9 +5,10 @@ serd (0.30.1) unstable;
   * Fix colliding blank nodes when parsing TriG
   * Fix missing parse error messages
   * Fix parsing TriG graphs with several squashed trailing dots
+  * Fix parsing "a" abbreviation without padding whitespace
   * Improve documentation
 
- -- David Robillard <d@drobilla.net>  Sat, 30 Mar 2019 12:33:56 +0100
+ -- David Robillard <d@drobilla.net>  Sat, 30 Mar 2019 12:57:54 +0100
 
 serd (0.30.0) stable;
 
